--- a/next.html
+++ b/next.html
@@ -110,11 +110,11 @@
             <img src="MyGirl.jpg" alt="Image 1"> 
         </div> 
         <div class="text text-top-right">
-            Haii wanita cantik, wanita baik, wanita kuat, Selamat hari perempuan sedunia ya cantikku 
+            Haii wanita cantikkuuuuuu, sayaangggkuuu, wanita kuatkuuu, duniaaakuuuuuuu, Selamat hari perempuan sedunia ya bibuuubbbbb
         </div> 
-        <a href="https://api.whatsapp.com/send?phone=6288210982908&text=Terimakasih%20sayangg%20(isi%20pesan%20mu)" class="button">BALAS</a>
+        <a href="https://api.whatsapp.com/send?phone=6281264637002&text=Terimakasih%20sayangg%20(isi%20pesan%20mu)" class="button">BALAS</a>
         <div class="text text-bottom-left">
-            Semoga kita bisa lebih lama lagi bersamanya, kalau perlu sampai menua bersama wkwk, kalau kamu punya masalah bilang ke aku yaa kita lewati masalah kamu bareng" Okeyy Sayangg
+            Semoga kita bisa terus bersama yaa sayaangg, masih banyak hal yg belum kita lakuin bareng", i lovee youuuuu sayaaangggkuuuuu 💍👰🏻💕💕💜💜💖💖💗💗💞💞💘💘♥️♥️💟💟🤍🤍💝💝💓💓
         </div> 
         <div class="box box-bottom-right"> 
             <img src="My-Girl.jpg" alt="Image 2"> 
